tests/SafeExtractionCopyIntroducedMVars.lean.expected
tests/SafeExtractionCopyIntroducedMVars.lean:29:2: warning: aesop: failed to prove the goal after exhaustive search.
tests/SafeExtractionCopyIntroducedMVars.lean:28:15: error: unsolved goals
case a.a
⊢ S ?a.y✝

case a.a
⊢ S ?a.y✝

case x
⊢ Nat

case a.a
⊢ S ?a.y✝

case a.a
⊢ S ?a.y✝

case x
⊢ Nat
tests/SafeExtractionCopyIntroducedMVars.lean:28:0: error: (kernel) declaration has metavariables '_example'
